--- a/findout/src/app/globals.css
+++ b/findout/src/app/globals.css
@@ -42,9 +42,9 @@ a{
 
 .layoutContainer{
   background-color: black;
-  margin: 0 auto;
-  padding: 10px;
-  gap: 2px;
+  margin: 0;
+  padding: 0px;
+  gap: 0px;
   display: flex;
   justify-content: left;
   flex-direction: column;
